# quassel

./: .appveyor.ini  .appveyor.yml  .clang-format  .craft.ini  .craftsettings.ini  .gitattributes  .gitignore  .gitmodules  .travis.yml  0001-Fixed-some-small-inconsistencies.patch  0001-l10n-update-italian-translations.patch  0002-Small-correction-in-the-README.Translations-file.patch  0003-missed-some-strings.patch  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  INSTALL.Qtopia  INSTALL.cmake  Makefile  Quassel.kdevelop.filelist  README  README.Qtopia  README.cmake  README.md  appveyor.ini  appveyor.yml  foo.txt  quassel.desktop  quassel.pro  quasselclient.desktop  snap.wrapper  snapcraft.yaml  version.dist  version.h.in  version.inc  win_build.bat
data/: CMakeLists.txt  data.qrc  default.qss  networks.ini  quassel.appdata.xml  quassel.desktop  quassel.notifyrc  quassel.notifyrc.in  quasselclient.appdata.xml  quasselclient.desktop
data/scripts/: mpris
data/stylesheets/: DarkMonokai.qss  DarkSolarized.qss  LinuxDolt-bluestheme.qss  a3.qss  default.qss  elbryan_quassel_theme.qss  gabydewilde-black.qss  jussi01-darktheme.qss  m4yer.qss  mj12cyan.qss  qwater.qss  temerity1.0.1.qss  tokyonight.qss
gui/: CMakeLists.txt  buffer.cpp  buffer.h  bufferview.cpp  bufferview.h  bufferviewwidget.cpp  bufferviewwidget.h  bufferwidget.cpp  bufferwidget.h  channelwidget.cpp  channelwidget.h  channelwidget.ui  channelwidgetinput.cpp  channelwidgetinput.h  chatwidget.cpp  chatwidget.h  coreconnectdlg.cpp  coreconnectdlg.h  coreconnectdlg.ui  gui.cpp  gui.h  guiproxy.cpp  guiproxy.h  identities.cpp  identitiesdlg.ui  identitieseditdlg.ui  ircwidget.ui  mainwin.cpp  mainwin.h  mainwin.ui  mainwindow.ui  networkeditdlg.ui  networkview.cpp  networkview.h  networkwidget.ui  nickeditdlg.ui  serverlist.cpp  serverlist.h  serverlistdlg.ui  settings.cpp  (+7 more)
gui/ui/: bufferviewwidget.ui  bufferwidget.ui  connectionsettingspage.ui  identitieseditdlg.ui  mainwin.ui  networkview.ui  servereditdlg.ui  settingsdlg.ui
i18n/: CMakeLists.txt  README  README.Translations  i18n.qrc  quassel.po  quassel.qm  quassel.ts  quassel_cs.po  quassel_cs.ts  quassel_da.po  quassel_da.qm  quassel_da.ts  quassel_de.po  quassel_de.qm  quassel_de.ts  quassel_fi.po  quassel_fi.ts  quassel_fr.po  quassel_fr.qm  quassel_fr.ts  quassel_hu.ts  quassel_it.po  quassel_it.ts  quassel_nb_NO.po  quassel_nb_NO.ts  quassel_ru.po  quassel_ru.ts  quassel_sl.po  quassel_sl.ts  quassel_tr_TR.ts  update.sh
icons/: CMakeLists.txt  README.Breeze  README.BreezeDark  README.Oxygen  README.md  breeze-extra.qrc  breeze.qrc  breeze_dark_icons.qrc  breeze_icons.qrc  breezedark-extra.qrc  breezedark.qrc  hicolor.qrc  hicolor_icons.qrc  missing_icons  oxygen-extra.qrc  oxygen.qrc  oxygen_icons.qrc  oxygen_kde.qrc
icons/breeze/: COPYING  index.theme
icons/breezedark/: index.theme
icons/import/: blacklisted-icons  blacklisted-icons.breeze  blacklisted-icons.oxygen  extra-icons  extra-icons.qrc.breeze  extra-icons.qrc.breezedark  extra-icons.qrc.oxygen  import_oxygen.pl  import_theme.pl  whitelist-icons  whitelisted-icons
icons/oxygen/: README.Quassel  index.theme
icons/oxygen_quassel/: AUTHORS  CONTRIBUTING  README.Quassel
pics/: CMakeLists.txt  README.qt-logo  pics.qrc  quassel-logo.svgz  quassel.icns  win32.rc
po/: CMakeLists.txt  LINGUAS  README.Translations  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  en_US.po  eo.po  es.po  es_AR.po  et.po  et_EE.po  fi.po  fr.po  gl.po  hi.po  hu.po  id_ID.po  it.po  ja.po  ko.po  lt.po  mr.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  pull-from-transifex.sh  quassel.pot  quassel.pot.patch  quassel_cs.po  quassel_de.po  quassel_es_ES.po  quassel_fi.po  (+18 more)
src/: CMakeLists.txt
src/client/: CMakeLists.txt  abstractmessageprocessor.cpp  abstractmessageprocessor.h  abstractui.cpp  abstractui.h  backlogrequester.cpp  backlogrequester.h  backlogsettings.cpp  backlogsettings.h  buffer.cpp  buffer.h  bufferhotlistfilter.cpp  bufferhotlistfilter.h  buffermodel.cpp  buffermodel.h  buffersettings.cpp  buffersettings.h  buffertreemodel.cpp  buffertreemodel.h  bufferviewoverlay.cpp  bufferviewoverlay.h  client.cpp  client.h  client.pri  client.pro  clientaliasmanager.cpp  clientaliasmanager.h  clientauthhandler.cpp  clientauthhandler.h  clientbacklogmanager.cpp  clientbacklogmanager.h  clientbufferviewconfig.cpp  clientbufferviewconfig.h  clientbufferviewmanager.cpp  clientbufferviewmanager.h  clientcoreinfo.cpp  clientcoreinfo.h  clientidentity.cpp  clientidentity.h  clientignorelistmanager.cpp  (+50 more)
src/common/: CMakeLists.txt  abstractcliparser.h  abstractsignalwatcher.h  aliasmanager.cpp  aliasmanager.h  authhandler.cpp  authhandler.h  backlogmanager.cpp  backlogmanager.h  basichandler.cpp  basichandler.h  bufferinfo.cpp  bufferinfo.h  buffersyncer.cpp  buffersyncer.h  bufferviewconfig.cpp  bufferviewconfig.h  bufferviewmanager.cpp  bufferviewmanager.h  build_core.cpp  build_mono.cpp  build_qtgui.cpp  cipher.cpp  cipher.h  cliparser.cpp  cliparser.h  common.pri  common.pro  compressor.cpp  compressor.h  coreinfo.cpp  coreinfo.h  ctcpevent.cpp  ctcpevent.h  dccconfig.cpp  dccconfig.h  deferredptr.h  event.cpp  event.h  eventmanager.cpp  (+109 more)
src/core/: CMakeLists.txt  UPDATE_SQL_RESOURCE.sh  abstractsqlstorage.cpp  abstractsqlstorage.h  authenticator.cpp  authenticator.h  backgroundtaskhandler.cpp  backgroundtaskhandler.h  backlog.cpp  basichandler.cpp  basichandler.h  cipher.cpp  cipher.h  core.cpp  core.h  core.pri  corealiasmanager.cpp  corealiasmanager.h  coreapplication.cpp  coreapplication.h  coreauthhandler.cpp  coreauthhandler.h  corebacklogmanager.cpp  corebacklogmanager.h  corebasichandler.cpp  corebasichandler.h  corebuffersyncer.cpp  corebuffersyncer.h  corebufferviewconfig.cpp  corebufferviewconfig.h  corebufferviewmanager.cpp  corebufferviewmanager.h  corecoreinfo.cpp  corecoreinfo.h  coredccconfig.cpp  coredccconfig.h  coreeventmanager.cpp  coreeventmanager.h  corehighlightrulemanager.cpp  corehighlightrulemanager.h  (+85 more)
src/icons/: icons.qrc  quassel-icons.qrc  quassel.icns  (+1 more)
(+1639 files in other folders)
